# feagi-java-sdk

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
sdk-cli/: build.gradle.kts
sdk-cli/src/main/java/io/feagi/sdk/cli/: BvCommand.java  BvHelpers.java  BvProcessManager.java  BvRestartCommand.java  BvStartCommand.java  BvStatusCommand.java  BvStopCommand.java  CliHelpers.java  ConfigCommand.java  ConfigShowCommand.java  FeagiCli.java  FeagiProcessManager.java  InitCommand.java  NetworkSettings.java  PidFileManager.java  ProcessStatus.java  ProcessUtils.java  RestartCommand.java  StartCommand.java  StatusCommand.java  StopCommand.java
sdk-cli/tests/io/feagi/sdk/cli/: BvHelpersTest.java  BvProcessManagerTest.java  CliHelpersTest.java  ConfigShowCommandTest.java  FeagiCliTest.java  FeagiProcessManagerTest.java  InitCommandTest.java  PidFileManagerTest.java  ProcessUtilsTest.java
sdk-core/: build.gradle.kts
sdk-core/src/main/java/io/feagi/sdk/core/: AgentCapabilities.java  AgentConfig.java  FeagiEndpoints.java  FeagiResolution.java  MotorCapability.java  MotorUnit.java  MotorUnitSpec.java  SensoryCapability.java  SensorySocketConfig.java  SensoryUnit.java  VisionCapability.java  VisualizationCapability.java
sdk-core/tests/io/feagi/sdk/core/: AgentConfigTest.java
sdk-engine/: build.gradle.kts
sdk-engine/src/main/java/io/feagi/sdk/engine/: BvDiscovery.java  FeagiConfig.java  FeagiDiscovery.java  FeagiEngine.java  FeagiPaths.java
sdk-engine/tests/io/feagi/sdk/engine/: BvDiscoveryTest.java  FeagiConfigTest.java  FeagiDiscoveryTest.java  FeagiEngineTest.java  FeagiPathsTest.java
sdk-native/: build.gradle.kts
sdk-native/src/main/cpp/: CMakeLists.txt  feagi_jni.cpp
sdk-native/src/main/java/io/feagi/sdk/nativeffi/: AgentTypeCode.java  FeagiNativeBindings.java  FeagiNativeLibrary.java  MotorUnitCode.java  NativeFeagiAgentClient.java  NativeSmokeTest.java  SensoryUnitCode.java
sdk-native/src/test/java/io/feagi/sdk/nativeffi/: NativeFeagiAgentClientTest.java
